# Basics-Boot-Camp

./: .gitignore  .gitleaks.toml  .gitleaksignore  .jupyterlite.doit.db  .mkdocsignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Helpful_Hints.MD  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.claude/: .settings.json  CLAUDE.md
.githooks/: install.sh  pre-push
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
HW/: README.MD
MKDOCS-SETUP-COMPLETE/: index.html
Week 1/: Python_Basics_01_-_Introduction.ipynb  Python_Basics_02_-_Syntax_And_Basic_Statements.ipynb  Python_Basics_03_-_Variables_&_Garbage_Collection.ipynb  Python_Basics_04_-_Operators.ipynb  Python_Basics_05_-_Decision_Making.ipynb  Python_Basics_06_-_Sequences.ipynb  Python_Basics_07_-_Variable_Type_NUMBERS.ipynb  Python_Basics_08_-_Variable_Type_STRING.ipynb  Python_Basics_11_-_Variable_Type_DICTIONARY.ipynb  Python_Basics_12_-_Type_Conversions.ipynb
Week 2/: Python_Basics_13_-_Iterators_And_Generators.ipynb  Python_Basics_15_-_Scope_Of_Variables.ipynb  Python_Basics_16_-_Modules.ipynb
Week 3/: Python_Basics_18_-_Exceptions_&_Assertions.ipynb
Week_1/: Python_Basics_01_-_Introduction.ipynb  Python_Basics_02_-_Syntax_And_Basic_Statements.ipynb  Python_Basics_03_-_Variables_&_Garbage_Collection.ipynb  Python_Basics_04_-_Operators.ipynb  Python_Basics_05_-_Decision_Making.ipynb  Python_Basics_06_-_Sequences.ipynb  Python_Basics_07_-_Variable_Type_NUMBERS.ipynb  (+6 more)
(+325 files in other folders)
