[project]
name = "basics-boot-camp"
version = "0.1.0"
description = "Python basics bootcamp project with training and additional supporting materials."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlite-core>=0.7.0",
    "jupyterlite-pyodide-kernel>=0.7.0",
    "libarchive-c>=5.3",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-jupyterlite>=0.3.2",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.0",
    "mkdocs-monorepo-plugin>=1.1.2",
    "mkdocs-section-index>=0.3.10",
    "notebook>=7.5.0",
    "pymdown-extensions>=10.17.2",
]

[dependency-groups]
dev = [
    "autopep8==2.3.2",
    "black==25.11.0",
    "coverage==7.1.0",
    "flake8>=7.3.0",
    "pep8==1.7.1",
    "pyflakes>=3.4.0",
    "pytest==9.0.1",
    "pytest-cache==1.0",
    "pytest-cov==4.0.0",
    "pytest-flakes==4.0.5",
    "pytest-pep8==1.0.6",
    "pytest-pythonpath>=0.7.3",
    "ruff==0.14.6",
]
